--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,6 @@ PORT=3000
 BASE_URL=http://localhost:3000
 TEMP_DIR=./temp
 YTDLP_PATH=yt-dlp
+MONGO_URI=mongodb://localhost:27017
+# Or for production:
+# MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/telegramMusicBot?retryWrites=true&w=majority
