--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "express": "^4.18.2",
     "node-cache": "^5.1.2",
     "yt-search": "^2.10.3",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "^4.11.5",
+    "mongodb": "^5.7.0",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
