add cleanup system

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,10 @@ YTDLP_PATH=yt-dlp
 MONGO_URI=mongodb://localhost:27017
 # Or for production:
 # MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/telegramMusicBot?retryWrites=true&w=majority
+# For StreamCleaner
+TEMP_DIR=./temp_audio
+CLEANUP_INTERVAL=3600000
+
+# For MongoMonitor
+MONGO_RETRY_DELAY=5000
+
