--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,3 +12,7 @@ CLEANUP_INTERVAL=3600000
 # For MongoMonitor
 MONGO_RETRY_DELAY=5000
 
+# Bot
+TELEGRAM_BOT_TOKEN=your_bot_token_here
+WEBAPP_BASE_URL=https://your-webapp-domain.com
+BACKEND_API_URL=http://localhost:3000/BACKEND_API_URL
