--- a/backend/package.json
+++ b/backend/package.json
@@ -10,18 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-cache": "^5.1.2",
-    "yt-search": "^2.10.3",
-    "ytdl-core": "^4.11.5",
+    "mongoose": "^8.0.3",
     "mongodb": "^5.7.0",
-    "mongoose": "^8.0.3"
+    "node-cache": "^5.1.2",
+    "telegraf": "^4.12.2",
+    "yt-search": "^2.10.3",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=16.0.0"
